<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<TextView
		android:id="@+id/text_view_db_id_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/text_db_id" />

	<EditText
		android:id="@+id/edit_text_db_id"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:enabled="false"
		android:focusable="false"/>

	<TextView
		android:id="@+id/text_view_item_id_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/text_item_id" />

	<EditText
		android:id="@+id/edit_text_item_id"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:enabled="false"
		android:focusable="false"/>

	<TextView
		android:id="@+id/text_view_item_cd_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/text_item_cd" />

	<EditText
		android:id="@+id/edit_text_item_cd"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

	<TextView
		android:id="@+id/text_view_item_value_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/text_item_value" />

	<EditText
		android:id="@+id/edit_text_item_value"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

	<TextView
		android:id="@+id/text_view_reg_date_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/text_reg_date" />

	<EditText
		android:id="@+id/edit_text_reg_date"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:enabled="false"
		android:focusable="false"/>

	<TextView
		android:id="@+id/text_view_upd_date_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/text_upd_date" />

	<EditText
		android:id="@+id/edit_text_upd_date"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:enabled="false"
		android:focusable="false"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:weightSum="2">

		<Button
			android:id="@+id/button_confirm"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/text_confirm"/>

		<Button
			android:id="@+id/button_cancel"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/text_cancel"/>
	</LinearLayout>

</LinearLayout>